Added users delete route, unit test and updated swagger docs.
